--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/atlantech/screeps-strategy#readme",
   "dependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.3.0",
     "grunt-cli": "^1.2.0",
-    "grunt-screeps": "^1.2.1"
+    "grunt-screeps": "^1.5.0",
+    "lodash": "^4.17.20",
+    "uuid": "^8.3.2"
   }
 }
